<resources>
    <string name="app_name">Intervention2</string>
    <string name="button_send">Press me!</string>

    <string name="IntOp1"> Quick breathing exercise… Breathe deeply and slowly until the time runs out.  </string>
    <string name="IntOp1Link">http://e.ggtimer.com/m/1%20minutes</string>
    <string name="Button_eggtimer">Click here!</string>
    <string name="button">Click here!</string>
    <string name="IntOp2">Go grab a coffee or take a short walk with someone.</string>
    <string name="textview">TextView</string>
    <string name="IntOp3">Change your posture</string>
    <string name="IntOp4">Watch a funny video with a friend</string>
    <string name="button_op3">Click here!</string>
    <string name="button_op4">Click here!</string>
    <string name="practice_notification">Notification</string>
    <string name="IntOp5">Time for a quick stretch! Try some of these for a few of minutes…</string>
    <string name="button_op5">Try some!</string>
    <string name="IntOp6">Walk to a friends office and have a quick chat until the time runs out</string>
    <string name="button_op6">Ready?</string>
    <string name="IntOp7">Cats are hilarious. Check out a few of these and show ones you like to your friends.</string>
    <string name="button_op7">Click to see some funny cats!</string>
    <string name="IntOp8">Enjoy one of these (not so?) funny jokes :)…</string>
    <string name="button_op8">Click here!</string>
    <string name="countdown_text">Countdown</string>
    <string name="time_left">Time left</string>
    <string name="IntOp9">SMILE… fake it till you make it!</string>
    <string name="IntOp10">Ask your friend to make a funny face</string>
    <string name="button_op10">Click here!</string>
    <string name="HeartOp1">Shall we play a short game?</string>
    <string name="button_HOp1">Click here!</string>
    <string name="HeartOp2">Affirmations always make us feel better. Check some of these out and share them with some friends.</string>
    <string name="button_Hop2">Click here!</string>
    <string name="HeartOp3">Make the familiar new again. Pick one picture of a mundane object and observe it mindfully for a couple of minutes.</string>
    <string name="HeartOp4">Acceptance is blissful. Write down a stressful incident you encountered with another person, and imagine it flies away and disappears, and then destroy it.</string>
    <string name="button_HOp4">Click to note</string>
    <string name="HeartOp5">Relax and listen to a simple calming tune…</string>
    <string name="button_HOp5">Click to listen</string>
    <string name="HeartOp6">Share a calm video with family or friends after viewing it yourself.</string>
    <string name="button_HOp6">Click here!</string>
    <string name="Main_screen_feeling">How are you feeling now?</string>
    <string name="Slider_good">Calm</string>
    <string name="Slider_stressed">Stressed</string>
    <string name="seekBar_0">0</string>
    <string name="general_done">Done</string>
    <string name="general_button">Done</string>
    <string name="intervention_ask">Do you want to take a break?</string>
    <string name="break_yes">Yes</string>
    <string name="break_no">No</string>
    <string name="reply_label">Reply</string>
    <string name="followUp_how_are_you_feeling">How are you feeling?</string>
    <string name="followup_did_you_like">Did you like this intervention?</string>
    <string name="button_followUp_yes">Yes</string>
    <string name="button_followUp_no">No</string>
    <string name="button_IntOp1_done">Done</string>
    <string name="followUp_stressed">Stressed</string>
    <string name="followUp_calm">Calm</string>
    <string name="cats_video">Cats</string>
    <string name="button_IntOp2_done">Done</string>
    <string name="button_IntOp3_done">Done</string>
    <string name="button_IntOp4_done">Done</string>
    <string name="button_IntOp5_done">Done</string>
    <string name="button_IntOp6_done">Done</string>
    <string name="button_IntOp7_done">Done</string>
    <string name="button_IntOp8_done">Done</string>
    <string name="button_IntOp9_done">Done</string>
    <string name="button_IntOp10_done">Done</string>
    <string name="button_hop1_done">Done</string>
    <string name="button_hop2_done">Done</string>
    <string name="button_hop3_done">Done</string>
    <string name="button_hop4_done">Done</string>
    <string name="button_hop5_done">Done</string>
    <string name="button_hop6_done">Done</string>
    <string name="HeartOp7">Look at some cute things</string>
    <string name="button_HOp7">Click here!</string>
    <string name="button_hop7_done">Done</string>
    <string name="HeartOp8">Share one of these with friends after viewing it</string>
    <string name="button_HOp8">Click here</string>
    <string name="button_hop8_done">Done</string>
    <string name="HeartOp9">Remember a beautiful moment in your recent past, close your eyes and remember each detail.</string>
    <string name="button_hop9_done">Done</string>
    <string name="HeartOp10">Give somebody a pat on the back for any good reason.</string>
    <string name="button_hop10_done">Done</string>
    <string name="MindOp1">Offload your mind. Write yourself an email with some issue that could wait for later.</string>
    <string name="button_MOp1">Send email</string>
    <string name="button_mop1_done">Done</string>
    <string name="MindOp2">Write a friend asking for ideas on how to do something you want or need to accomplish.</string>
    <string name="button_Mop2">Send email</string>
    <string name="button_mop2_done">Done</string>
    <string name="MindOp3">Challenge yourself! Replace an unpleasant thought with two pleasant ones. Write the pleasant ones down.</string>
    <string name="button_Mop3">Click here</string>
    <string name="button_mop3_done">Done</string>
    <string name="MindOp4">Try to think what new perspective this news brings to your life and share it with someone else</string>
    <string name="button_Mop4">Click here</string>
    <string name="button_mop4_done">Done</string>
    <string name="MindOp5">If you can achieve something in the next month, what would it be? - use your personal notepad to write down a reasonably small step towards a goal.</string>
    <string name="button_Mop5">Click here</string>
    <string name="button_mop5_done">Done</string>
    <string name="MindOp6">Think about a hard situation a friend/family is going through, and find some alternative solutions online.  Send it to them.</string>
    <string name="button_Mop6">Click here</string>
    <string name="button_mop6_done">Done</string>
    <string name="MindOp7">Listen carefully with your eyes closed to a new song in a genre you like.</string>
    <string name="button_Mop7">Click here</string>
    <string name="button_mop7_done">Done</string>
    <string name="MindOp8">Find two different opinions about a topic and share them with a friend.</string>
    <string name="button_Mop8">Click here</string>
    <string name="button_mop8_done">Done</string>
    <string name="MindOp9">Write down a very simple goal you want to accomplish this week on a post it note and place it where you can see it every day.</string>
    <string name="button_mop9_done">Done</string>
    <string name="MindOp10">Make a phone call to a friend and ask for some small advice in some problem you are facing.</string>
    <string name="button_mop10_done">Done</string>
    <string name="SoulOp1">Everyone has something they do really well... find an example on your Facebook timeline that showcases one of your strengths.</string>
    <string name="button_sop1">Click here</string>
    <string name="button_sop1_done">Done</string>
    <string name="facebook_app_id">Facebook App ID</string>
    <string name="SoulOp2">Learn about active constructive responding and practice with one person</string>
    <string name="button_sop2">Click here</string>
    <string name="button_sop2_done">Done</string>
    <string name="SoulOp3">The World is so diverse, learn 3 words in a language you’ve always wanted to learn.</string>
    <string name="button_sop3">Click here</string>
    <string name="button_sop3_done">Done</string>
    <string name="SoulOp4">Celebrate with others! Write a positive comment to some friend`s good posting in Facebook</string>
    <string name="button_sop4">Click here</string>
    <string name="button_sop4_done">Done</string>
    <string name="SoulOp5">Let us take a moment to travel somewhere</string>
    <string name="button_sop5">Click here</string>
    <string name="button_sop5_done">Done</string>
    <string name="SoulOp6">Make someone feel good!</string>
    <string name="button_sop6">Click here</string>
    <string name="button_sop6_done">Done</string>
    <string name="SoulOp7">Use a random generator from 1 to your current age and try to remember a good simple memory when you were that age.</string>
    <string name="button_sop7">Click here</string>
    <string name="age_text">Current Age</string>
    <string name="button_sop7_done">Done</string>
    <string name="SoulOp8">Donate to a cause you like or admire</string>
    <string name="button_sop8">Click here</string>
    <string name="button_sop8_done">Done</string>
    <string name="SoulOp9">Revise or recall your resume and remember how you survived a difficult work moment</string>
    <string name="button_sop9_done">Done</string>
    <string name="SoulOp10">Think about a hard situation a friend/family is going through, and find the strengths that make this person strong… send him/her an email about it.</string>
    <string name="button_sop10">Send email</string>
    <string name="button_sop10_done">Done</string>
    <string name="unlock">How are you feeling?</string>
    <string name="slider_unlock_stressed">Stressed</string>
    <string name="slider_unlock_calm">Calm</string>
    <string name="button_nextint">Next Intervention</string>


</resources>
